--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "com.github.bettehem.messenger"
         minSdkVersion 9
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -25,11 +24,14 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.google.android.gms:play-services-gcm:8.3.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.github.bettehem:androidtools:1.1.63-beta'
+    compile 'com.github.bettehem:androidtools:1.1.71'
     compile 'com.rockerhieu.emojicon:library:1.3.3'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile files('libs/commons-codec-1.7-SNAPSHOT-android.jar')
 }
+
+apply plugin: 'com.google.gms.google-services'
