--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
-    <permission android:name="com.github.bettehem.messenger.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
-    <uses-permission android:name="com.github.bettehem.messenger.permission.C2D_MESSAGE"/>
 
     <application
         android:allowBackup="true"
@@ -25,35 +22,18 @@
             </intent-filter>
         </activity>
 
-
-        <!--Receivers-->
-
-        <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-                <category android:name="com.github.bettehem.messenger"/>
-            </intent-filter>
-        </receiver>
-
-
         <!--Services-->
 
-        <service android:name=".gcm.MessengerGcmListenerServiceGcm"
-            android:exported="false">
+        <service android:name=".gcm.MessengerGcmListenerServiceGcm">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
         <service
-            android:name=".gcm.GcmInstanceIDListenerService"
-            android:exported="false">
+            android:name=".gcm.GcmInstanceIDListenerService">
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
