--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "26.0.0"
+
+    int appVersionCode = 9
+    String appVersionName = "0.0.1"
 
     dexOptions {
         javaMaxHeapSize "2g"
@@ -10,16 +14,50 @@ android {
 
     defaultConfig {
         applicationId "com.github.bettehem.messenger"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode appVersionCode
+        versionName appVersionName
         multiDexEnabled true
     }
     buildTypes {
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+        }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+        }
+    }
+
+    flavorDimensions "api", "mode"
+
+    productFlavors {
+        beta {
+            dimension "mode"
+            applicationId 'com.github.bettehem.messenger'
+            versionCode appVersionCode
+            versionNameSuffix versionName + "-beta"
+        }
+        prod {
+            dimension "mode"
+            applicationId 'com.github.bettehem.messenger'
+            versionCode appVersionCode
+            versionNameSuffix versionName
+        }
+
+        minApi14 {
+            dimension "api"
+            minSdkVersion "14"
+            multiDexEnabled true
+        }
+
+        minApi23 {
+            dimension "api"
+            minSdkVersion "23"
         }
     }
 
@@ -30,16 +68,15 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.google.android.gms:play-services:9.8.00'
-    compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'com.google.firebase:firebase-auth:9.6.1'
-    compile 'com.google.firebase:firebase-database:9.6.1'
-    compile 'com.google.firebase:firebase-crash:9.6.1'
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
+    compile 'com.google.firebase:firebase-core:11.0.1'
+    compile 'com.google.firebase:firebase-auth:11.0.1'
+    compile 'com.google.firebase:firebase-database:11.0.1'
+    compile 'com.google.firebase:firebase-crash:11.0.1'
+    compile 'com.google.firebase:firebase-messaging:11.0.1'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:design:25.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.bettehem:androidtools:1.1.71'
+    compile 'com.github.bettehem:androidtools:1.1.75'
     compile 'com.rockerhieu.emojicon:library:1.3.3'
     compile files('libs/commons-codec-1.7-SNAPSHOT-android.jar')
 }
