--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
 
     int appVersionCode = 9
     String appVersionName = "0.0.1"
@@ -22,7 +22,7 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
         }
@@ -79,6 +79,10 @@ dependencies {
     compile 'com.github.bettehem:androidtools:1.1.75'
     compile 'com.rockerhieu.emojicon:library:1.3.3'
     compile files('libs/commons-codec-1.7-SNAPSHOT-android.jar')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
+repositories {
+    mavenCentral()
+}
