--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
 
     int appVersionCode = 9
     String appVersionName = "0.0.1"
@@ -15,7 +15,7 @@ android {
     defaultConfig {
         applicationId "com.github.bettehem.messenger"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode appVersionCode
         versionName appVersionName
         multiDexEnabled true
@@ -62,19 +62,23 @@ android {
     }
 
     useLibrary 'org.apache.http.legacy'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.google.firebase:firebase-core:11.0.1'
-    compile 'com.google.firebase:firebase-auth:11.0.1'
-    compile 'com.google.firebase:firebase-database:11.0.1'
-    compile 'com.google.firebase:firebase-crash:11.0.1'
-    compile 'com.google.firebase:firebase-messaging:11.0.1'
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:multidex:1.0.2'
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-crash:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.bettehem:androidtools:1.1.75'
     compile 'com.rockerhieu.emojicon:library:1.3.3'
