--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.10'
+    ext.kotlin_version = '1.2.21'
     repositories {
         jcenter()
-
-        maven {
-            url "https://maven.google.com"
-        }
+        google()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:3.1.0'
-        classpath 'com.android.tools.build:gradle:3.1.0-alpha08'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha03'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,10 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-
-        maven {
-            url "https://maven.google.com"
-        }
+        google()
     }
 }
 
