--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation 'com.rockerhieu.emojicon:library:1.3.3'
     implementation files('libs/commons-codec-1.7-SNAPSHOT-android.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.api-client:google-api-client:1.23.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
