--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,29 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
-    int appVersionCode = 9
-    String appVersionName = "0.0.1"
+    int appVersionCode = 1
+    String appVersionName = "0.01"
 
+
+
+
+    
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    signingConfigs {
+        messengerKey {
+            keyAlias properties.getProperty('keystore.keyAlias')
+            keyPassword properties.getProperty('keystore.keyPassword')
+            storeFile file(properties.getProperty('keystore.path'))
+            storePassword properties.getProperty('keystore.password')
+        }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+    }
     dexOptions {
         javaMaxHeapSize "2g"
     }
-
     defaultConfig {
         applicationId "com.github.bettehem.messenger"
         minSdkVersion 14
@@ -18,6 +34,7 @@ android {
         versionCode appVersionCode
         versionName appVersionName
         multiDexEnabled true
+        signingConfig signingConfigs.messengerKey
     }
     buildTypes {
         debug {
@@ -27,23 +44,30 @@ android {
         }
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
         }
     }
     flavorDimensions "api", "mode"
     productFlavors {
+        alpha {
+            dimension "mode"
+            applicationId 'com.github.bettehem.messenger'
+            versionCode appVersionCode
+            versionNameSuffix appVersionName + "-alpha"
+        }
         beta {
             dimension "mode"
             applicationId 'com.github.bettehem.messenger'
             versionCode appVersionCode
-            versionNameSuffix versionName + "-beta"
+            versionNameSuffix appVersionName + "-beta"
         }
         prod {
             dimension "mode"
             applicationId 'com.github.bettehem.messenger'
             versionCode appVersionCode
-            versionNameSuffix versionName
+            versionNameSuffix appVersionName
         }
 
         minApi14 {
@@ -58,7 +82,6 @@ android {
         }
     }
     useLibrary 'org.apache.http.legacy'
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
