--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
 
         <!--Services-->
 
-        <service android:name=".gcm.MessengerGcmListenerServiceGcm">
+        <service android:name=".tools.fcm.MessengerGcmListenerServiceGcm">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
         <service
-            android:name=".gcm.GcmInstanceIDListenerService">
+            android:name=".tools.fcm.GcmInstanceIDListenerService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
